<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_outer_container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingBottom="128sp"
    android:background="@android:color/transparent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/only_border_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="12sp"
        android:paddingBottom="14sp">

        <TextView
            android:id="@+id/textViewHeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_question"
            android:textAlignment="center"
            android:textColor="#3F3E3E"
            android:textSize="28sp" />

        <Button
            android:id="@+id/btnUpdateVersion"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginStart="2sp"
            android:layout_marginTop="12sp"
            android:layout_marginEnd="2sp"
            android:background="@drawable/top_bottom_border_bg"
            android:text="@string/update_version"
            android:textColor="#000000"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnRemindMeLater"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginStart="2sp"
            android:layout_marginTop="12sp"
            android:layout_marginEnd="2sp"
            android:background="@drawable/top_bottom_border_bg"
            android:text="@string/remind_me_later"
            android:textColor="#000000"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnSkipVersion"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginStart="2sp"
            android:layout_marginTop="12sp"
            android:layout_marginEnd="2sp"
            android:layout_marginBottom="10sp"
            android:background="@drawable/top_bottom_border_bg"
            android:text="@string/skip_this_update"
            android:textColor="#000000"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>