<?xml version="1.0" encoding="utf-8"?>

<!-- Each pack details, when you press on a pack ( not the add button ) -->
<!-- this is the page that will be opened                               -->
<!-- all the stickers appear on the recyclerview below -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg_light"
    android:orientation="vertical"
    tools:context=".StickerPackDetailsActivity">
    <!--    Custom Toolbar     -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8sp">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="30sp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="6sp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_button"
            android:src="@drawable/arrow_back_black" />

        <ImageView
            android:id="@+id/action_share"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_marginEnd="14sp"
            android:layout_toStartOf="@+id/action_like"
            android:src="@drawable/share" />

        <ImageView
            android:id="@+id/action_like"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_marginEnd="14sp"
            android:layout_toStartOf="@+id/action_info"
            android:scaleType="center"
            android:src="@drawable/ic_heart" />

        <ImageView
            android:id="@+id/action_info"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="6sp"
            android:src="@drawable/sticker_3rdparty_info" />

    </RelativeLayout>
    <!--    Pack Details       -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutPackDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/preview_side_margin"
        android:paddingLeft="@dimen/preview_side_margin"
        android:paddingTop="4sp"
        android:paddingEnd="@dimen/preview_side_margin"
        android:paddingRight="@dimen/preview_side_margin"
        android:paddingBottom="@dimen/preview_side_margin">

        <ImageView
            android:id="@+id/cover_image"
            android:layout_width="100sp"
            android:layout_height="95sp"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/tray_image_content_description"
            android:src="@drawable/place_holder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3sp"
            android:layout_marginBottom="8sp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/cover_image"
            app:layout_constraintStart_toEndOf="@+id/cover_image"
            app:layout_constraintTop_toTopOf="@+id/cover_image">

            <TextView
                android:id="@+id/pack_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="#000000"
                android:textSize="19sp"
                android:textStyle="bold"
                tools:text="Pack Name" />

            <TextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:ellipsize="end"
                android:maxLines="1"
                tools:text="Author" />

            <TextView
                android:id="@+id/pack_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Size" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/addToWhatsappContainer"
            android:layout_width="wrap_content"
            android:layout_height="35sp"
            android:layout_gravity="center"
            android:background="@drawable/add_whatsapp_bg_red"
            android:gravity="center"
            android:padding="2sp"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/linearLayout3"
            app:layout_constraintTop_toTopOf="@+id/linearLayout3">

            <TextView
                android:id="@+id/already_added_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="2sp"
                android:text="@string/details_pack_already_added"
                android:textColor="#000000"
                android:textSize="12sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/add_to_whatsapp_button"
                style="@style/StickerPreviewButtonText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/add_to_whatsapp"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                app:drawableEndCompat="@drawable/whatsapp_icon_white" />

        </FrameLayout>

        <TextView
            android:id="@+id/pack_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sample_text"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/cover_image"
            app:layout_constraintTop_toBottomOf="@+id/cover_image"
            tools:ignore="SmallSp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--    Pack Stickers      -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sticker_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:fadingEdgeLength="@dimen/fading_edge_length"
            android:paddingStart="@dimen/preview_side_margin"
            android:paddingEnd="@dimen/preview_side_margin"
            android:requiresFadingEdge="vertical" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.1"
            android:background="#000000"
            android:visibility="invisible"
            tools:visibility="visible" />

    </FrameLayout>

    <!--    Google AdMob        -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@drawable/banner_ad_bg"
        android:gravity="center">

        <!--    Test Ad :  ca-app-pub-3940256099942544/6300978111    -->
        <com.google.android.gms.ads.AdView
            android:id="@+id/adViewInDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12sp"
            android:layout_marginEnd="12sp"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-4998289698335082/6659708662" />

    </LinearLayout>

</LinearLayout>
